data/reddit/bitsignal.txt
@_author: bitsignal
@_date: 2016-04-26 15:50:54
It would be nice to see cash as a trading option. Local bitcoins has a nice system in that matter.
@_date: 2016-04-26 09:43:20
It worked great without any problems. So I didn't notice any bugs, yet. :)
@_date: 2016-04-09 08:10:36
SegWit is not a scaling solution.
@_date: 2016-04-08 13:33:20
Breadwallet is a really great app. Bitcoin user experience used to be better, though. Since this year my transactions take lots (sometimes days) of time to confirm, which does not has anything to do with breadwallet.
@_date: 2016-04-26 17:00:27
The idea has been around for some years and finally there is an actual product. :)
@_date: 2016-04-26 15:55:49
Yes, it would require wire transfers or you could also use okpay. I assume that it works similar to local bitcoins.
@_date: 2016-04-26 12:15:30
It was not that complicated. At least not more difficult than other exchanges. I would start with a small amount to learn how the system works.
In the video I mentioned that the system could be improved when trading only crypto currencies e.g. Ethereum &gt; Bitcoin. Finalizing the trade took a relatively long time (3,5 hours) because I had to wait for the seller to finalize the trade even though the ethereum blockchain confirmed my transaction at least 2 hours earlier. This process could theoretically be automated which would make perfect sense.
@_date: 2017-02-09 11:15:27
Maybe because users don't want to be pushed to a different network.
@_date: 2016-12-12 18:05:51
Moon - 17k
Mars - 20k
Jupiter - 105k
Saturn - 511k
Uranus - 611k
Neptun - 4.4m
Pluto - 43m
@_date: 2016-11-30 12:41:31
RemindMe! One Year
@_date: 2015-07-26 06:55:40
Thanks for your reply, it helped.
@_date: 2015-07-26 06:56:46
Still it would be nice being able to decrypt bip38 in the command line.
@_date: 2015-07-26 06:44:49
I like the fast workflow of encrypting lots of paperwallets using bip38 but I guess I could also use a custom way of encrypting the data (like gpg).
@_date: 2015-07-27 05:00:17
Thank you for the link.
@_date: 2015-07-27 04:59:19


What would you say is the best bip38 alternative to encrypt the private key?
@_date: 2015-07-26 06:52:37
Wouldn't I also need to download the current browser version along with the current OS?
@_date: 2015-07-27 05:15:55


Thanks, that works. :)
@_date: 2015-07-27 05:05:46
Is it possible to create an offline bip39 paper wallet?
@_date: 2015-07-28 05:40:22
Thanks, I will take a look at it and see if can get my head around bip39 paper wallets.
@_date: 2015-07-26 12:49:50
I have installed node.js and the bip38 package on a Mac. However when I try to decrypt running app.js I get this message:
`app.js:3  
var privateKeyWif = bip38.decrypt(process.argv[2], process.argv[3)  
                                                                 ^
SyntaxError: Unexpected token )  
    at exports.runInThisContext (vm.js:73:16)  
    at Module._compile (module.js:443:25)  
    at Object.Module._extensions..js (module.js:478:10)  
    at Module.load (module.js:355:32)  
    at Function.Module._load (module.js:310:12)  
    at Function.Module.runMain (module.js:501:10)  
    at startup (node.js:129:16)  
    at node.js:814:3 `
**EDIT: It works using this format, now. Thank you**
`var Bip38 = require('bip38')  
   
var encryptedKey = '6PRVWUbkzzsbcVac2qwfssoUJAN1Xhrg6bNk8J7Nzm5H7kxEbn2Nh2ZoGg'  
   
var bip38 = new Bip38()  
var privateKeyWif = bip38.decrypt(encryptedKey, 'TestingOneTwoThree')  
console.log(privateKeyWif)`